# PersonaCore-2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
personacore/: __init__.py  main.py
personacore/ai/: __init__.py  model_manager.py  ollama_client.py  personas.py  prompt_enricher.py
personacore/config/: settings.py
personacore/export/: __init__.py  exporter.py
personacore/gui/: __init__.py  animations.py  main_window.py  theme.py
personacore/gui/components/: __init__.py  animated_button.py  glass_panel.py  gradient_border.py  stat_badge.py
personacore/gui/widgets/: __init__.py  log_console.py  prompt_studio.py  settings_panel.py  sidebar.py  step_tracker.py  title_bar.py  video_preview.py
personacore/logging_module/: __init__.py  logger.py
personacore/project/: __init__.py  project_manager.py
personacore/video/: __init__.py  animatediff_generator.py  base_generator.py  demo_generator.py  ffmpeg_pipeline.py  registry.py  zeroscope_generator.py
personacore/workers/: __init__.py  enrichment_worker.py  generation_worker.py  model_refresh_worker.py
tests/: test_demo_generator.py  test_settings.py  test_settings_panel.py
